# hive

./: .gitignore  README.md  build.sh  hive.cabal  package.yaml  stack.yaml
app/: HiveLocal.hs  HiveWebSocketClient.hs  HiveWebSocketServer.hs  Lib.hs
app/Hive/Impl/: Common.hs  Console.hs  WebSocket.hs
app/Hive/Impl/Console/: LocalMain.hs  Player.hs  WebSocket.hs  WebSocketClientMain.hs  WebSocketServerMain.hs
app/extra/Control/Monad/Trans/State/Ref/: Extra.hs
app/extra/Network/Wai/: Lifted.hs
app/extra/Network/Wai/Handler/Warp/: Lifted.hs
app/extra/Network/Wai/Handler/WebSockets/: Lifted.hs
app/extra/Network/WebSockets/: Lifted.hs
app/local/: Main.hs
hive/: LICENSE  README.md  hive.cabal  package.yaml
hive-client/: hive-client.cabal  stack.yaml
hive-client/app/: Main.hs
hive-client/src/Hive/: Client.hs
hive-console/: hive-console.cabal  package.yaml
hive-console/app/: Main.hs
hive-console/src/Hive/Console/: Player.hs
hive-server/: hive-server.cabal  stack.yaml
hive-server/app/: Main.hs
hive-server/src/Hive/: Server.hs
hive-websocket-server/: hive-websocket-server.cabal  package.yaml
hive-websocket-server/app/: Application.hs  Main.hs
hive-websocket-server/src/Hive/WebSocketServer/: Client.hs  Message.hs  Room.hs  State.hs
hive/src/: Hive.hs
hive/src/Data/: HexBoard.hs
hive/src/Data/HexBoard/: Zipper.hs
hive/src/Data/List/: Zipper.hs
hive/src/Hive/: Action.hs  BoardZipper.hs  Bug.hs  Error.hs  Expansions.hs  Game.hs  Monad.hs  Types.hs
hive/test/: DocTest.hs  Spec.hs
src/: Hive.hs  Utils.hs
src/Data/: HexBoard.hs
src/Hive/: Action.hs  Board.hs  Bug.hs  Error.hs  Expansions.hs  Game.hs  Monad.hs  Player.hs  Tile.hs  Types.hs
