name:                hive
version:             0.1.0.0
synopsis:            Hive
description:         Hive
homepage:            http://github.com/mitchellwrosen/hive
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
copyright:           2015 Mitchell Rosen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.HexBoard
                     , Hive
                     , Hive.Monad
                     , Hive.Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , extra
                     , lens
                     , free
                     , semigroups
                     , transformers
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hive-local
  hs-source-dirs:      app
  main-is:             HiveLocal.hs
  other-modules:       Hive.Impl.Common
                     , Hive.Impl.Console
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , haskeline
                     , hive
                     , lens
                     , megaparsec
                     , semigroups
                     , transformers
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite hive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/hive
