name:                hive-client
version:             0.1.0.0
synopsis:            Hive client
description:         Hive client
homepage:            http://github.com/mitchellwrosen/hive
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
copyright:           2015 Mitchel Rosen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hive.Client
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hive-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hive
                     , hive-client
  default-language:    Haskell2010

test-suite hive-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hive-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/hive
