name:                hive-server
version:             0.1.0.0
synopsis:            Hive server
description:         Hive server
homepage:            http://github.com/mitchellwrosen/hive
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
copyright:           2015 Mitchell Rosen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hive.Server
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hive-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hive
                     , hive-server
  default-language:    Haskell2010

test-suite hive-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/hive
